--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -16,6 +16,7 @@
                 android:textColor="#000000"
                 android:textSize="20sp"
                 android:text="BUY"
+                android:visibility="gone"
                 android:padding="20dp"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
@@ -30,10 +31,6 @@
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
-
-        </LinearLayout>
-            android:layout_height="wrap_content"/>
-
     </ScrollView>
 
 </FrameLayout>
